--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "niubi-cli",
-  "version": "1.0.0",
-  "description": "一个综合牛逼的脚手架工具",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/niubijs/niubi-cli.git"
-  },
-  "author": "lonewolfyx",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/niubijs/niubi-cli/issues"
-  },
-  "homepage": "https://github.com/niubijs/niubi-cli#readme"
+    "name": "niubi-cli",
+    "version": "0.0.1",
+    "description": "一个综合牛逼的脚手架工具",
+    "private": true,
+    "workspaces": [
+        "packages/make",
+        "packages/niubi-cli"
+    ],
+    "type": "commonjs",
+    "bin": {
+        "niubi": "./packages/niubi-cli/index.js"
+    },
+    "scripts": {
+        "bootstrap": "lerna bootstrap",
+        "clean": "lerna clean",
+        "build": "lerna run build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:niubijs/niubi-cli.git"
+    },
+    "author": "是什么你猜",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/commander": "^2.12.2",
+        "commander": "^12.1.0",
+        "handlebars": "^4.7.8",
+        "lerna": "^8.1.8"
+    },
+    "engines": {
+        "node": ">=20.0.0"
+    }
 }
