--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "workspaces": [
         "packages/make",
-        "packages/niubi-cli"
+        "packages/niubi-cli",
+        "packages/create"
     ],
     "type": "commonjs",
     "bin": {
